--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/web3.js": "1.90.0",
+    "@solana/web3.js": "^1.91.7",
     "@swc/helpers": "~0.5.2",
     "@tabler/icons-react": "2.47.0",
     "@tailwindcss/typography": "0.5.10",
@@ -30,7 +30,7 @@
     "daisyui": "4.7.2",
     "encoding": "0.1.13",
     "jotai": "2.6.5",
-    "next": "13.4.4",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.1",
@@ -67,7 +67,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "17.2.7",
-    "postcss": "8.4.21",
+    "postcss": "^8.4.38",
     "prettier": "^2.6.2",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
