--- a/anchor/Anchor.toml
+++ b/anchor/Anchor.toml
@@ -1,4 +1,5 @@
 [toolchain]
+anchor_version = "0.29.0"
 
 [features]
 seeds = false
@@ -26,3 +27,4 @@ upgradeable = false
 bind_address = "127.0.0.1"
 ledger = ".anchor/test-ledger"
 rpc_port = 8899
+
